fix test case and formatter